--- a/serverless.yml
+++ b/serverless.yml
@@ -61,13 +61,17 @@ provider:
 functions:
   hello:
     handler: handler.hello
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
+  
     events:
       - httpApi:
           path: /
-          method: get
+          method: any
+  testingFunction:
+    handler: myCustomHandler.myFunction
+    events:
+      - httpApi:
+          path: /test
+          method: any
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
